--- a/src/app/elements/articles/articles.component.html
+++ b/src/app/elements/articles/articles.component.html
@@ -1,5 +1,3 @@
-<app-header></app-header>
-<app-sidebar></app-sidebar>
 <div class="content-padder content-background">
   <div class="uk-section-small">
     <div class="uk-container uk-container-large">
@@ -8,10 +6,10 @@
           <div class="uk-card uk-card-default uk-card-body">
             <article class="uk-article">
               <h1 class="uk-article-title">
-                <a class="uk-link-reset" href="">Heading</a>
+                <a class="uk-link-reset" routerLink="/">Heading</a>
               </h1>
               <p class="uk-article-meta">
-                Written by <a href="#">Super User</a> on 12 April 2012. Posted in <a href="#">Blog</a>
+                Written by <a routerLink="/">Super User</a> on 12 April 2012. Posted in <a routerLink="#">Blog</a>
               </p>
               <p class="uk-text-lead">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip.
@@ -21,10 +19,10 @@
               </p>
               <div class="uk-grid-small uk-child-width-auto" uk-grid>
                 <div>
-                  <a class="uk-button uk-button-text" href="#">Read more</a>
+                  <a class="uk-button uk-button-text" routerLink="/">Read more</a>
                 </div>
                 <div>
-                  <a class="uk-button uk-button-text" href="#">5 Comments</a>
+                  <a class="uk-button uk-button-text" routerLink="/">5 Comments</a>
                 </div>
               </div>
             </article>
