--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -37,7 +37,7 @@
                               </div>
                            </div>
                            <div class="uk-margin">
-                              <a href="/" class="uk-button uk-button-primary">
+                              <a routerLink="/dashboard.html" class="uk-button uk-button-primary">
                               <span class="ion-forward"></span>&nbsp; Register
                             </a>
                            </div>
@@ -46,7 +46,7 @@
                               <p>
                                  Already have an account?
                               </p>
-                              <a href="login.html" class="uk-button uk-button-default">
+                              <a routerLink="/login.html" class="uk-button uk-button-default">
                               <span class="ion-android-person"></span>&nbsp; Login
                               </a>
                            </div>
