--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -3,13 +3,13 @@
     <li class="uk-nav-header">
       {{globals.webtitle}} Elements
     </li>
-    <li><a href="articles.html">Articles</a></li>
-    <li><a href="tables.html">Tables</a></li>
+    <li><a routerLink="/dashboard/articles">Articles</a></li>
+    <li><a routerLink="/dashboard/tables">Tables</a></li>
     <li class="uk-nav-header">
       Pages
     </li>
-    <li><a href="login.html">Login</a></li>
-    <li><a href="register.html">Register</a></li>
-    <li><a href="404.html">404</a></li>
+    <li><a routerLink="/login">Login</a></li>
+    <li><a routerLink="/register">Register</a></li>
+    <li><a routerLink="/404">404</a></li>
   </ul>
 </div>
