--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,9 +1,9 @@
-<div uk-sticky class="uk-navbar-container tm-navbar-container uk-active">
+<div uk-sticky class="uk-navbar-container tm-navbar-container">
   <div class="uk-container uk-container-expand">
     <nav uk-navbar>
       <div class="uk-navbar-left">
         <a id="sidebar_toggle" class="uk-navbar-toggle" uk-navbar-toggle-icon ></a>
-        <a href="#" class="uk-navbar-item uk-logo">
+        <a routerLink="/" class="uk-navbar-item uk-logo">
           {{globals.webtitle}}
         </a>
       </div>
@@ -14,9 +14,9 @@
             <div uk-dropdown="pos: bottom-right; mode: click; offset: -17;">
               <ul class="uk-nav uk-navbar-dropdown-nav">
                 <li class="uk-nav-header">Options</li>
-                <li><a href="#">Edit Profile</a></li>
+                <li><a routerLink="/">Edit Profile</a></li>
                 <li class="uk-nav-header">Actions</li>
-                <li><a href="#">Logout</a></li>
+                <li><a (click)="logout()">Logout</a></li>
               </ul>
             </div>
           </li>
