--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -3,13 +3,14 @@
     <li class="uk-nav-header">
       {{globals.webtitle}} Elements
     </li>
-    <li><a routerLink="/dashboard/articles">Articles</a></li>
-    <li><a routerLink="/dashboard/tables">Tables</a></li>
+    <li><a [routerLink]="['dashboard/articles']">Articles</a></li>
+    <li><a [routerLink]="['dashboard/tables']">Tables</a></li>
+    <li><a [routerLink]="['dashboard/products']">Products</a></li>
     <li class="uk-nav-header">
       Pages
     </li>
-    <li><a routerLink="/login">Login</a></li>
-    <li><a routerLink="/register">Register</a></li>
-    <li><a routerLink="/404">404</a></li>
+    <li><a [routerLink]="['login']">Login</a></li>
+    <li><a [routerLink]="['register']">Register</a></li>
+    <li><a [routerLink]="['404']">404</a></li>
   </ul>
 </div>
