--- a/src/app/products/overview/overview.component.html
+++ b/src/app/products/overview/overview.component.html
@@ -17,7 +17,7 @@
                 <h6 class="uk-margin-remove uk-text-uppercase">Type</h6>
                 <a href="#" class="uk-link-reset">
                   <span class="uk-label">
-                    <span uk-icon="icon: tag; ratio: 1;"></span> {{ (product) ? product.type_id : null }}
+                    <span uk-icon="icon: tag; ratio: 1;"></span> {{ (product && product.type) ? product.type.name : null }}
                   </span>
                 </a>
               </div>
