added product add ui, api product types and update product class

--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,6 +1,7 @@
 <div class="content-padder content-background">
   <div class="uk-section-small">
     <div class="uk-container uk-container-large">
+      <product-add></product-add>
       <div class="uk-card uk-card-default uk-card-body">
         <table class="uk-table uk-table-justify uk-table-divider">
           <thead>
