--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,11 @@ html, body{
   height:100%;
   background-color: #F0F0F0;
 }
+
+.ng-invalid:not(form)  {
+  border: 1px solid #ff6a6a;
+}
+
 .loading-overlay {
   display: flex;
   justify-content: center;
