clean up and remake the code, missing products list and product overview

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,2 @@
-<app-header *ngIf="wrapper && !loading"></app-header>
-<app-sidebar *ngIf="wrapper && !loading"></app-sidebar>
-<div class="loading-overlay" *ngIf="loading">
-  Loading <span class="d">.</span><span class="d d-2">.</span><span class="d d-3">.</span>
-</div>
-<router-outlet *ngIf="!loading"></router-outlet>
+<!--The content below is only a placeholder and can be replaced.-->
+<router-outlet></router-outlet>
