add product function

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<ng-progress [color]="'white'" [showSpinner]="false" [positionUsing]="'translate3d'"></ng-progress>
 <router-outlet></router-outlet>
