added product edit ui and integrated with api

--- a/src/app/shared/components/sidebar.component.html
+++ b/src/app/shared/components/sidebar.component.html
@@ -3,6 +3,6 @@
     <li class="uk-nav-header">
       Modules
     </li>
-    <li><a [routerLink]="['/dashboard/products']"><i uk-icon="icon: list;"></i> <span>Products</span></a></li>
+    <li><a [routerLink]="['/dashboard/products']"><i uk-icon="icon: database;"></i> <span>Products</span></a></li>
   </ul>
 </div>
