--- a/src/app/main/products/edit/edit.component.html
+++ b/src/app/main/products/edit/edit.component.html
@@ -1,6 +1,7 @@
-<button class="uk-button uk-button-primary uk-margin-small" type="button" uk-toggle="target: #form-product-add; animation: uk-animation-slide-top, uk-animation-fade"><span uk-icon="icon: plus;ratio:1.25;"></span></button>
-<div id="form-product-add" class="uk-card uk-card-default uk-card-body uk-margin-small uk-margin-remove-top" hidden>
-  <h2 class="uk-card-title">New Product</h2>
+<button class="uk-button uk-button-primary uk-margin-small" type="button" uk-toggle="target: #form-product-edit; animation: uk-animation-slide-top, uk-animation-fade"><span uk-icon="icon: pencil;ratio:1.25;"></span></button>
+<button class="uk-button uk-button-danger uk-margin-small uk-margin-remove-top" type="button" uk-toggle="target: #form-product-edit; animation: uk-animation-slide-top, uk-animation-fade"><span uk-icon="icon: trash;ratio:1.25;"></span></button>
+<div id="form-product-edit" class="uk-card uk-card-default uk-card-body uk-margin-small uk-margin-remove-top" hidden>
+  <h2 class="uk-card-title">Edit Product: <strong>{{product.name}}</strong></h2>
   <form (ngSubmit)="onSubmit();productForm.reset()" #productForm="ngForm">
     <div class="uk-grid-small uk-child-width-1-3@m" uk-grid>
       <div class="uk-padding-small">
@@ -40,10 +41,10 @@
           [(ngModel)]="product.description" #description="ngModel"></textarea>
       </div>
       <div class="uk-width-1-1 uk-padding-small">
-        <button type="submit" class="uk-button uk-button-primary" uk-toggle="target: #form-product-add; animation: uk-animation-fade"
-          [disabled]="!productForm.form.valid">Save</button>
-        <button type="button" class="uk-button uk-button-default" uk-toggle="target: #form-product-add; animation: uk-animation-fade"
-          (click)="initProduct()">
+        <button type="submit" class="uk-button uk-button-primary"
+          [disabled]="!productForm.form.valid" uk-toggle="target: #form-product-edit; animation: uk-animation-fade">Save</button>
+        <button type="button" class="uk-button uk-button-default"
+          (click)="initProduct()" uk-toggle="target: #form-product-edit; animation: uk-animation-fade">
           Cancel
         </button>
       </div>
