order and customer module added

--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -3,6 +3,7 @@
 <div class="content-padder content-background">
   <div class="uk-section-small">
     <div class="uk-container uk-container-large">
+      <orders-add></orders-add>
       <div>
         <div class="uk-card uk-card-default uk-card-body">
           <h2 class="uk-card-title">Financials</h2>
