--- a/src/app/main/products/add/add.component.html
+++ b/src/app/main/products/add/add.component.html
@@ -40,7 +40,7 @@
           [(ngModel)]="product.description" #description="ngModel"></textarea>
       </div>
       <div class="uk-width-1-1 uk-padding-small">
-        <button type="submit" class="uk-button uk-button-primary" uk-toggle="target: #form-product-add; animation: uk-animation-fade"
+        <button type="submit" class="uk-button uk-button-primary"
           [disabled]="!productForm.form.valid">Save</button>
         <button type="button" class="uk-button uk-button-default" uk-toggle="target: #form-product-add; animation: uk-animation-fade"
           (click)="initProduct()">
