--- a/src/app/main/products/edit/edit.component.html
+++ b/src/app/main/products/edit/edit.component.html
@@ -42,7 +42,7 @@
       </div>
       <div class="uk-width-1-1 uk-padding-small">
         <button type="submit" class="uk-button uk-button-primary"
-          [disabled]="!productForm.form.valid" uk-toggle="target: #form-product-edit; animation: uk-animation-fade">Save</button>
+          [disabled]="!productForm.form.valid">Save</button>
         <button type="button" class="uk-button uk-button-default"
           (click)="initProduct()" uk-toggle="target: #form-product-edit; animation: uk-animation-fade">
           Cancel
