--- a/src/app/shared/components/sidebar.component.html
+++ b/src/app/shared/components/sidebar.component.html
@@ -3,6 +3,9 @@
     <li class="uk-nav-header">
       Modules
     </li>
+    <li><a [routerLink]="['/dashboard']"><i uk-icon="icon: home;"></i> <span>Dashboard</span></a></li>
     <li><a [routerLink]="['/dashboard/products']"><i uk-icon="icon: database;"></i> <span>Products</span></a></li>
+    <li><a [routerLink]="['/dashboard/customers']"><i uk-icon="icon: users;"></i> <span>Customers</span></a></li>
+    <li><a [routerLink]="['/dashboard/orders']"><i uk-icon="icon: cart;"></i> <span>Orders</span></a></li>
   </ul>
 </div>
