--- a/src/app/main/products/overview/overview.component.html
+++ b/src/app/main/products/overview/overview.component.html
@@ -13,7 +13,7 @@
             <div class="uk-grid-small uk-grid-divider uk-child-width-1-2@s uk-child-width-1-2@m" uk-grid>
               <div class="uk-width-1-1@s uk-width-1-1@m">
                 <h6 class="uk-margin-remove uk-text-uppercase">Name</h6>
-                <h1 class="uk-card-title uk-margin-remove">{{ (product) ? product.name : null }}</h1>
+                <h1 class="uk-card-title uk-margin-remove">{{ (product != null) ? product.name : null }}</h1>
                 <hr class="uk-divider-icon">
               </div>
               <div>
@@ -26,11 +26,11 @@
               </div>
               <div>
                 <h6 class="uk-margin-remove uk-text-uppercase">SKU</h6>
-                <span class="uk-text-bold">{{ (product) ? product.sku : null }}</span>
+                <span class="uk-text-bold">{{ (product != null) ? product.sku : null }}</span>
               </div>
               <div>
                 <h6 class="uk-margin-remove uk-text-uppercase">Stock</h6>
-                <span class="uk-text-bold">{{ (product) ? product.stock : null }}</span>
+                <span class="uk-text-bold">{{ (product != null) ? product.stock : null }}</span>
               </div>
               <div>
                 <h6 class="uk-margin-remove uk-text-uppercase">Sold</h6>
@@ -38,17 +38,17 @@
               </div>
               <div>
                 <h6 class="uk-margin-remove uk-text-uppercase">Cost</h6>
-                <span class="uk-text-bold">{{ (product) ? product.cost : null }}</span>
+                <span class="uk-text-bold">{{ (product != null) ? product.cost : null }}</span>
               </div>
               <div>
                 <h6 class="uk-margin-remove uk-text-uppercase">Selling Price</h6>
-                <span class="uk-text-bold">{{ (product) ? product.selling_price : null }}</span>
+                <span class="uk-text-bold">{{ (product != null) ? product.selling_price : null }}</span>
               </div>
               <div class="uk-width-1-1@s uk-width-1-1@m">
                 <hr class="uk-divider-icon">
                 <dl class="uk-description-list">
                     <dt>Description</dt>
-                    <dd>{{ (product) ? product.description : null }}</dd>
+                    <dd>{{ (product != null) ? product.description : null }}</dd>
                 </dl>
               </div>
             </div>
