--- a/src/app/main/dashboard/dashboard.component.html
+++ b/src/app/main/dashboard/dashboard.component.html
@@ -10,15 +10,15 @@
           <div class="uk-grid-small uk-grid-divider uk-child-width-expand@s uk-text-left" uk-grid>
               <div class="uk-text-uppercase">
                   Revenue<br/>
-                  ${{ (stat != null) ? stat.stats.revenue : null }}
+                  {{ (stat != null) ? currency.set(stat.stats.revenue).format('$0,0') : null }}
               </div>
               <div class="uk-text-uppercase">
                   Cost<br/>
-                  ${{ (stat != null) ? stat.stats.cost : null }}
+                  {{ (stat != null) ? currency.set(stat.stats.cost).format('$0,0') : null }}
               </div>
               <div class="strj-items-wr uk-text-uppercase">
                   Profit<br/>
-                  ${{ (stat != null) ? stat.stats.profit : null }}
+                  {{ (stat != null) ? currency.set(stat.stats.profit).format('$0,0') : null }}
               </div>
           </div>
         </div>
