--- a/src/app/main/products/add/add.component.html
+++ b/src/app/main/products/add/add.component.html
@@ -26,13 +26,13 @@
       </div>
       <div class="uk-padding-small">
         <label for="cost" class="uk-form-label">Cost</label>
-        <input type="number" name="cost" class="uk-input" placeholder="Cost"
-          [required]="true" [(ngModel)]="product.cost" #cost="ngModel">
+        <input type="text" name="cost" class="uk-input" placeholder="Cost"
+          [required]="true" [(ngModel)]="product.cost" #cost="ngModel" (keyup)="onKeyup($event)">
       </div>
       <div class="uk-padding-small">
         <label for="selling_price" class="uk-form-label">Selling Price</label>
-        <input type="number" name="selling_price" class="uk-input" placeholder="Selling Price"
-          [required]="true" [(ngModel)]="product.selling_price" #selling_price="ngModel">
+        <input type="text" name="selling_price" class="uk-input" placeholder="Selling Price"
+          [required]="true" [(ngModel)]="product.selling_price" #selling_price="ngModel" (keyup)="onKeyup($event)">
       </div>
       <div class="uk-width-1-1 uk-padding-small">
         <label for="Description" class="uk-form-label">Description</label>
