--- a/src/app/main/products/overview/overview.component.html
+++ b/src/app/main/products/overview/overview.component.html
@@ -26,11 +26,11 @@
               </div>
               <div>
                 <h6 class="uk-margin-remove uk-text-uppercase">SKU</h6>
-                <span class="uk-text-bold">{{ (product != null) ? product.sku : null }}</span>
+                <span class="uk-text-bold">{{ (product) ? product.sku : null }}</span>
               </div>
               <div>
                 <h6 class="uk-margin-remove uk-text-uppercase">Stock</h6>
-                <span class="uk-text-bold">{{ (product != null) ? product.stock : null }}</span>
+                <span class="uk-text-bold">{{ (product) ? product.stock : null }}</span>
               </div>
               <div>
                 <h6 class="uk-margin-remove uk-text-uppercase">Sold</h6>
@@ -38,11 +38,11 @@
               </div>
               <div>
                 <h6 class="uk-margin-remove uk-text-uppercase">Cost</h6>
-                <span class="uk-text-bold">{{ (product != null) ? product.cost : null }}</span>
+                <span class="uk-text-bold">{{ (product) ? currency.set(product.cost).format('$0,0') : null }}</span>
               </div>
               <div>
                 <h6 class="uk-margin-remove uk-text-uppercase">Selling Price</h6>
-                <span class="uk-text-bold">{{ (product != null) ? product.selling_price : null }}</span>
+                <span class="uk-text-bold">{{ (product) ? currency.set(product.selling_price).format('$0,0') : null }}</span>
               </div>
               <div class="uk-width-1-1@s uk-width-1-1@m">
                 <hr class="uk-divider-icon">
