--- a/src/app/main/orders/add/add.component.html
+++ b/src/app/main/orders/add/add.component.html
@@ -5,15 +5,23 @@
     <div class="uk-grid-small uk-child-width-1-3@m" uk-grid>
       <div class="uk-padding-small">
         <label for="product" class="uk-form-label">Product</label>
-        <storaji-autocomplete [(ngModel)]="order.order_detail.product" [suggestions]="autocomplete.data" (completeMethod)="autocomplete.filter(products, $event)" [size]="30"
-            [minLength]="1" [dropdown]="true" name="product.id" field="name" [required]="true">
-        </storaji-autocomplete>
+        <input ngui-auto-complete
+        class="uk-input"
+        [(ngModel)]="order.order_detail.product"
+        [source]="products"
+        list-formatter="name"
+        display-property-name="name"
+        placeholder="enter text" name="product" #product="ngModel"/>
       </div>
       <div class="uk-padding-small">
           <label for="customer" class="uk-form-label">Customer</label>
-          <storaji-autocomplete [(ngModel)]="order.customer" [suggestions]="autocomplete.data" (completeMethod)="autocomplete.filterCustomer(customers, $event)" [size]="30"
-              [minLength]="1" [dropdown]="true" name="customer.id" field="full_name" [required]="true">
-          </storaji-autocomplete>
+          <input ngui-auto-complete
+          class="uk-input"
+          [(ngModel)]="order.customer"
+          [source]="customers"
+          list-formatter="full_name"
+          display-property-name="full_name"
+          placeholder="enter text" name="customer" #customer="ngModel"/>
         </div>
       <div class="uk-padding-small">
         <label for="amount" class="uk-form-label">Amount</label>
@@ -25,7 +33,7 @@
         <button type="submit" class="uk-button uk-button-primary"
           [disabled]="!orderForm.form.valid">Save</button>
         <button type="button" class="uk-button uk-button-default" uk-toggle="target: #form-order-add; animation: uk-animation-fade"
-          (click)="initOrder()">
+          (click)="init()">
           Cancel
         </button>
       </div>
