--- a/src/app/shared/components/sidebar.component.html
+++ b/src/app/shared/components/sidebar.component.html
@@ -1,4 +1,4 @@
-<div id="sidebar" class="tm-sidebar-left uk-background-default" *ngIf="sidebar">
+<div id="sidebar" class="tm-sidebar-left uk-background-default">
   <ul class="uk-nav uk-nav-default uk-iconnav uk-iconnav-vertical">
     <li class="uk-nav-header">
       Modules
