--- a/src/app/main/customers/customers.component.html
+++ b/src/app/main/customers/customers.component.html
@@ -15,6 +15,9 @@
             </tr>
           </thead>
           <tbody>
+            <tr *ngIf="customers && !customers.length">
+              <th colspan="4" class="uk-text-center">No Data</th>
+            </tr>
             <tr *ngFor="let customer of customers; let i=index;">
               <td class="uk-text-uppercase">#{{customer.id.split('-')[0]}}</td>
               <td class="uk-table-link">
