--- a/src/app/main/customers/edit/edit.component.html
+++ b/src/app/main/customers/edit/edit.component.html
@@ -45,7 +45,7 @@
           Save
         </button>
         <button type="button" class="uk-button uk-button-default"
-          (click)="initcustomer()" uk-toggle="target: #form-customer-edit; animation: uk-animation-fade">
+          (click)="initCustomer()" uk-toggle="target: #form-customer-edit; animation: uk-animation-fade">
           Cancel
         </button>
       </div>
